--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "embla-carousel-react": "^8.6.0",
     "lucide-react": "^0.511.0",
     "motion": "^12.15.0",
+    "nanoid": "^5.1.5",
     "next": "15.3.3",
     "postcss": "^8.5.4",
     "prettier": "^3.5.3",
